# FreshrFridge

./: .env.example  .gitignore  BUILD-AI-BOARD-ONLY.bat  BUILD-FIRMWARE.bat  BUILD-FLASH-AI-BOARD.bat  CHECK-SETUP.bat  Check Setup.bat  FLASH-AI-BOARD.bat  FLASH-FIRMWARE.bat  README.md  Run.ps1  SETUP-NEXT-STEPS.txt  START-ALL.bat  START-BACKEND.bat  START-WEB.bat  WHICH-UI.txt  config.bat  index.html  package-lock.json  package.json  setup-tuya.bat  vite.config.ts
scripts/: install-backend.ps1
src/: App.tsx  index.css  types.ts
src/components/: AddItemForm.tsx  AssistantPanel.tsx  FridgeItemCard.tsx  UseFirstPanel.tsx
src/hooks/: useFridgeItems.ts
src/lib/: api.ts  priority.ts  speech.ts  storage.ts
tuya-t5/: README.md  chatbot-board.config  clean-ai-build.ps1  deploy-to-tuyaopen.ps1  flash-ai-board.ps1  merge-chatbot-secrets.ps1  patch-chatbot-wifi-touch.ps1  patch-enable-emoji-ui.ps1  patch-english-lang.ps1
tuya-t5/freshrfridge/: CMakeLists.txt
tuya-t5/freshrfridge/config/: TUYA_T5AI_BOARD_LCD_3.5.config  TUYA_T5AI_BOARD_LCD_CAMERA.config  device_secrets.config.example  merge-secrets.bat  merge-secrets.ps1
tuya-t5/freshrfridge/include/: camera_scan.h  fridge_item.h  fridge_priority.h  fridge_store.h  ui_fridge.h
tuya-t5/freshrfridge/src/: freshrfridge_main.c  fridge_item.c  fridge_priority.c  fridge_store.c
tuya-t5/freshrfridge/src/camera/: camera_scan_stub.c
tuya-t5/freshrfridge/src/ui/: ui_fridge.c
